--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 
+../src/config.js
+
+
 # testing
 /coverage
 
@@ -22,5 +25,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/src/config.js
 
