--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-/src/config.js
+src/config.js
 
 
 # testing
@@ -25,4 +27,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
+/src/config.js
